[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flash1dkmeans"
version = "0.1.3"
authors = [
    { name = "Jake Hyun", email = "jake.hyun@hotmail.com" },
]
description = "An optimized K-means implementation for the one-dimensional case."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba~=0.60.0",
    "numpy~=2.0.0"
]

[project.urls]
Homepage = "https://github.com/SyphonArch/flash1dkmeans"
Issues = "https://github.com/SyphonArch/flash1dkmeans/issues"

[tool.hatch.build.targets.sdist]
exclude = ["benchmarks/**", "tests/**"]

[tool.hatch.build.targets.wheel]
exclude = ["benchmarks/**", "tests/**"]
